--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <fieldset class="search-form__fieldset">
             <h2 class="search-form__fieldset-title">Время суток</h2>
             <div class="search-form__checkbox-list">
-              <label class="search-form__label hover">
+              <label class="search-form__label">
                 <input
                   type="checkbox"
                   name="time"
@@ -42,7 +42,7 @@
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">Утро</span>
               </label>
-              <label class="search-form__label hover">
+              <label class="search-form__label">
                 <input
                   type="checkbox"
                   name="time"
@@ -52,7 +52,7 @@
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">День</span>
               </label>
-              <label class="search-form__label hover">
+              <label class="search-form__label">
                 <input
                   type="checkbox"
                   name="time"
@@ -64,7 +64,7 @@
               </label>
             </div>
           </fieldset>
-          <button type="submit" class="button search-form__submit-button active hover">
+          <button type="submit" class="button search-form__submit-button">
             Найти
           </button>
         </form>
@@ -93,7 +93,7 @@
     </template>
 
     <template class="cards-list-item-template">
-      <li class="content__list-item active hover">
+      <li class="content__list-item">
         <a href="#0" class="content__card-link">
           <article class="content__video-card">
             <div class="content__video-card-description-container">
@@ -106,7 +106,7 @@
       </li>
     </template>
     <template class="more-button-template">
-      <li><button class="button more-button active hover">Показать еще</button></li>
+      <li><button class="button more-button">Показать еще</button></li>
     </template>
 
     <template class="error-template">
